tests/fixtures/valid/reserved_root_std_alias.incn
"""Aliasing an import to reserved root 'std' is allowed (only declarations are rejected)."""

import std.web as std

def main() -> None:
    pass
