tests/fixtures/invalid/rust_interop_dot_notation.incn
"""rust interop should be with `::`-notation not `.` notation."""

import rust.std.time

def main() -> None:
    pass
